--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,9 @@ body {
 .letter-spacing {
   letter-spacing: 0.5rem;
 }
+
+.header-hero {
+  min-height: calc(100vh - 56px);
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    center/cover no-repeat url("./images/homeBcg.jpeg");
+}
