Added single recipe page

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ body {
   font-family: "Monoton", cursive; */
 }
 
+.text-slanted-small {
+  font-family: "Righteous", cursive;
+}
+
 .text-orange {
   color: #f15025;
 }
